expose refresh, cancel auto refresh

--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
     "request": "^2.85.0",
     "request-promise": "^4.2.2"
   },
-  "keywords": [
-    "tor",
-    "exit",
-    "tor exit"
-  ],
+  "keywords": ["tor", "exit", "tor exit"],
   "author": "assafmo",
   "repository": {
     "type": "git",
