--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "istorexit",
-  "version": "0.4.4",
+  "version": "0.5.0",
   "description": "Check if an IP is a Tor exit node",
   "main": "main.js",
   "bin": {
@@ -10,7 +10,11 @@
     "request": "^2.85.0",
     "request-promise": "^4.2.2"
   },
-  "keywords": ["tor", "exit", "tor exit"],
+  "keywords": [
+    "tor",
+    "exit",
+    "tor exit"
+  ],
   "author": "assafmo",
   "repository": {
     "type": "git",
