--- a/package.json
+++ b/package.json
@@ -6,15 +6,8 @@
   "bin": {
     "istorexit": "./main.js"
   },
-  "dependencies": {
-    "request": "^2.85.0",
-    "request-promise": "^4.2.2"
-  },
-  "keywords": [
-    "tor",
-    "exit",
-    "tor exit"
-  ],
+  "dependencies": {},
+  "keywords": ["tor", "exit", "tor exit"],
   "author": "assafmo",
   "repository": {
     "type": "git",
