--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "istorexit",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Check if an IP is a Tor exit node",
   "main": "main.js",
   "bin": {
     "istorexit": "./main.js"
   },
   "dependencies": {},
-  "keywords": ["tor", "exit", "tor exit"],
+  "keywords": [
+    "tor",
+    "exit",
+    "tor exit"
+  ],
   "author": "assafmo",
   "repository": {
     "type": "git",
