remove the need for --ip (implement parse flags, remove npm dependency)

--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "bin": {
     "istorexit": "./main.js"
   },
-  "dependencies": {
-    "flags": "^0.1.3"
-  },
+  "dependencies": {},
   "keywords": [
     "tor",
     "exit",
