--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "istorexit": "./main.js"
   },
   "dependencies": {},
-  "keywords": [
-    "tor",
-    "exit",
-    "tor exit"
-  ],
+  "keywords": ["tor", "exit", "tor exit"],
   "author": "assafmo",
   "repository": {
     "type": "git",
@@ -20,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/assafmo/IsTorExit/issues"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^22.4.3",
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2"
+  },
+  "scripts": {
+    "test":
+      "curl https://check.torproject.org/cgi-bin/TorBulkExitList.py -G -d ip=216.58.206.110 -d port=443 > ips.txt && jest"
+  }
 }
